Styling for human rights

--- a/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
+++ b/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
@@ -1533,6 +1533,8 @@ hr {
         a {
             display: inline-block;
             vertical-align: middle;
+            max-width: 100%;
+            width: 12rem;
             height: 12rem;
             line-height: 12rem;
             display: block;
