--- a/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
+++ b/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
@@ -274,6 +274,8 @@ p.quote {
         a {
             display: inline-block;
             vertical-align: middle;
+            max-width: 100%;
+            width: 12rem;
             height: 12rem;
             line-height: 12rem;
             display: block;
