--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1164,6 +1164,7 @@ iframe {
     text-align: center;
     display: block !important;
     padding-top: $spacing-unit !important;
+    padding-bottom: $spacing-unit*2 !important;
     li {
         padding: 0 !important;
         height: $spacing-unit*2;
@@ -1488,6 +1489,14 @@ iframe {
     }
     .mdc-layout-grid__inner {
         margin-bottom: $spacing-unit/2;
+    }
+    .book-now {
+        .mdc-button {
+            min-width: 60%;
+            max-width: 100%;
+            margin: 1rem auto 0;
+            display: block;
+        }
     }
 }
 .policy-research.briefings-consultation-responses .mdc-card__supporting-text,
