--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1490,14 +1490,14 @@ iframe {
     .mdc-layout-grid__inner {
         margin-bottom: $spacing-unit/2;
     }
-    .book-now {
-        .mdc-button {
-            min-width: 60%;
-            max-width: 100%;
-            margin: 1rem auto 0;
-            display: block;
-        }
-    }
+    // .book-now {
+    //     .mdc-button {
+    //         min-width: 60%;
+    //         max-width: 100%;
+    //         margin: 1rem auto 0;
+    //         display: block;
+    //     }
+    // }
 }
 .policy-research.briefings-consultation-responses .mdc-card__supporting-text,
 .policy-research.research .mdc-card__supporting-text,
