--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -627,6 +627,9 @@ a:hover {
 iframe {
     border: none;
 }
+figure {
+    margin: $spacing-unit 0;
+}
 .mdc-textfield__input,
 .mdc-textfield__input:focus,
 .mdc-textfield__input:hover {
