--- a/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/signatory-search.hbs
@@ -6,7 +6,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
                     <h4>Search</h4>
-                    <div class="mdc-textfield mdc-textfield--upgraded keywords" data-mdc-auto-init="MDCTextField">
+                    <div class="mdc-textfield mdc-textfield--upgraded keywords">
                         <input type="text" class="mdc-textfield__input" name="q" id="charter-keywords" value="{{params.query.q}}" placeholder="Search for a charter signatory">
                         <div class="mdc-textfield__bottom-line"></div>
                     </div>
