Services page styling

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1558,8 +1558,8 @@ h1.mdc-typography--title {
 }
 .support {
     .mdc-card__media {
-        height: 80px;
-        padding: $spacing-unit*(3/4) $spacing-unit;
+        height: $spacing-unit*4;
+        padding: $spacing-unit/2 $spacing-unit;
         background-size: contain;
         background-repeat: no-repeat;
         background-origin: content-box;
@@ -1578,7 +1578,9 @@ h1.mdc-typography--title {
         }
     }
     .mdc-card__primary {
-        // margin-bottom: $spacing-unit;
+      padding: $spacing-unit;
+      height: $spacing-unit*2;
+      // margin-bottom: $spacing-unit;
         .mdc-card__title {
             padding-bottom: 0;
             color: white;
@@ -1617,19 +1619,19 @@ h1.mdc-typography--title {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/funding-scotland.png');
     }
     .goodhq .mdc-card__media {
-        background-color: #4033E9;
+        background-color: #4033E9 !important;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/goodhq.png');
     }
     .tfn .mdc-card__media {
-        background-color: #3b9db1;
+        background-color: #3b9db1 !important;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/tfn.png');
     }
     .credit-union .mdc-card__media {
-        background-color: #1976D2;
+        background-color: #1976D2 !important;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/credit-union.png');
     }
     .milo .mdc-card__media {
-        background-color: #4475A0;
+        background-color: #4475A0 !important;
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/milo.png');
     }
     .mdc-card__supporting-text {
