--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1556,6 +1556,9 @@ h1.mdc-typography--title {
 .support.funding .mdc-card {
     margin: $spacing-unit 0;
 }
+.services .support .mdc-card__primary {
+    height: $spacing-unit*2;
+}
 .support {
     .mdc-card__media {
         height: $spacing-unit*4;
@@ -1578,9 +1581,8 @@ h1.mdc-typography--title {
         }
     }
     .mdc-card__primary {
-      padding: $spacing-unit;
-      height: $spacing-unit*2;
-      // margin-bottom: $spacing-unit;
+        padding: $spacing-unit;
+        // margin-bottom: $spacing-unit;
         .mdc-card__title {
             padding-bottom: 0;
             color: white;
