Added caption to header image

--- a/functions/test-db/json2/scvo/templates/page.hbs
+++ b/functions/test-db/json2/scvo/templates/page.hbs
@@ -18,6 +18,11 @@
                             </span>
                         </h1>
                     {{/if}}
+                    {{#if supplimentaryResponses.splash.hits.hits.[0]._source.caption}}
+                    <div class="header-caption">
+                        {{supplimentaryResponses.splash.hits.hits.[0]._source.caption}}
+                    </div>
+                    {{/if}}
                 </div>
             </div>
         </div>
