Fixed evidence library search categories

--- a/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
@@ -63,6 +63,8 @@
 
                     <hr /> -->
 
+                    {{> search_info}}
+
                     <div class="mdc-layout-grid equal-height">
                         <div class="mdc-layout-grid__inner">
                             {{#each primaryResponse.hits.hits}}
