--- a/functions/test-db/json2/scvo/templates/job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/job-search.hbs
@@ -74,6 +74,8 @@
             </button>
         </form>
 
+        {{> search_info}}
+
         {{#each primaryResponse.hits.hits}}
         {{{_source.rendered.scvo_search_result}}}
         {{/each}}
