--- a/functions/test-db/json2/scvo/templates/trustee-search.hbs
+++ b/functions/test-db/json2/scvo/templates/trustee-search.hbs
@@ -35,6 +35,8 @@
                     {{/with}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content trustee-content">
+                    {{> search_info}}
+
                     {{#each primaryResponse.hits.hits}}
                     {{{_source.rendered.trustee_search_result}}}
                     {{/each}}
