--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -27,7 +27,7 @@
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </ul>
-                    {{> pagination paging=paging params=params}}
+                    {{> pagination}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
                     <div class="author_about">
