--- a/functions/test-db/json2/scvo/templates/page-policy.hbs
+++ b/functions/test-db/json2/scvo/templates/page-policy.hbs
@@ -1,85 +1,71 @@
-<div class="splash-image splash-image-{{primaryResponse.hits.hits.[0]._type}}" style="{{> header_splash_image}}">
-    <div class="splash-overlay{{#if primaryResponse.hits.hits.[0]._source.hide_overlay}} splash-overlay-hidden{{/if}}">
-        <div class="container-fluid">
-            <div class="mdc-layout-grid">
-                {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-                <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-                {{else}}
-                <h1 class="header-text">
-                    <span class="header-text-banner">
-                        {{{primaryResponse.hits.hits.[0]._source.title}}}
-                    </span>
-                </h1>
-                {{/if}}
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container-fluid content page-content">
-    {{> breadcrumbs}}
+<div class="page">
+    {{> header_splash}}
+    <div class="container-fluid content page-content">
+        {{> breadcrumbs}}
 
-    {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
+        {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
 
-    <div class="mdc-layout-grid latest-content">
-        <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                <h3>Briefings</h3>
+        <div class="mdc-layout-grid latest-content">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                    <h3>Briefings</h3>
 
-                {{#if supplimentaryResponses.latest_briefings.hits.hits}}
-                {{{supplimentaryResponses.latest_briefings.hits.hits.[0]._source.rendered.gist}}}
-                {{{supplimentaryResponses.latest_briefings.hits.hits.[1]._source.rendered.gist}}}
-                {{{supplimentaryResponses.latest_briefings.hits.hits.[2]._source.rendered.gist}}}
-                {{/if}}
+                    {{#if supplimentaryResponses.latest_briefings.hits.hits}}
+                    {{{supplimentaryResponses.latest_briefings.hits.hits.[0]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_briefings.hits.hits.[1]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_briefings.hits.hits.[2]._source.rendered.gist}}}
+                    {{/if}}
 
-                <a href="/policy-research/briefings" class="v-margin">More briefings</a>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                <h3>Consultation responses</h3>
-
-                {{#if supplimentaryResponses.latest_consultation_responses.hits.hits}}
-                {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[0]._source.rendered.gist}}}
-                {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[1]._source.rendered.gist}}}
-                {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[2]._source.rendered.gist}}}
-                {{/if}}
-
-                <a href="/policy-research/consultation-responses" class="v-margin">More consultation responses</a>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone no-border">
-                <h3>Research</h3>
-
-                {{#if supplimentaryResponses.latest_research.hits.hits}}
-                {{{supplimentaryResponses.latest_research.hits.hits.[0]._source.rendered.gist}}}
-                {{{supplimentaryResponses.latest_research.hits.hits.[1]._source.rendered.gist}}}
-                {{{supplimentaryResponses.latest_research.hits.hits.[2]._source.rendered.gist}}}
-                {{/if}}
-
-                <a href="/policy-research/research" class="v-margin">More research</a>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                <div class="mdc-card">
-                    <section class="mdc-card__primary">
-                        <h1 class="mdc-card__title mdc-card__title--large">Campaigns</h1>
-                    </section>
-                    <section class="mdc-card__supporting-text">Learn more about our campaigns.</section>
-                    <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/projects-campaigns" href="/projects-campaigns">Find out more</a></section>
+                    <a href="/policy-research/briefings" class="v-margin">More briefings</a>
                 </div>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                <div class="mdc-card">
-                    <section class="mdc-card__primary">
-                        <h1 class="mdc-card__title mdc-card__title--large">Evidence Library</h1>
-                    </section>
-                    <section class="mdc-card__supporting-text">A resource for anyone interested in learning about the third sector in Scotland.</section>
-                    <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/policy-research/evidence-libr" href="/policy-research/evidence-library">Find out more</a></section>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                    <h3>Consultation responses</h3>
+
+                    {{#if supplimentaryResponses.latest_consultation_responses.hits.hits}}
+                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[0]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[1]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_consultation_responses.hits.hits.[2]._source.rendered.gist}}}
+                    {{/if}}
+
+                    <a href="/policy-research/consultation-responses" class="v-margin">More consultation responses</a>
                 </div>
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                <div class="mdc-card">
-                    <section class="mdc-card__primary">
-                        <h1 class="mdc-card__title mdc-card__title--large">Policy Committee</h1>
-                    </section>
-                    <section class="mdc-card__supporting-text">Advising us on policies which reflect the best interests of the third sector in Scotland.</section>
-                    <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/policy-research/policy-commit" href="/policy-research/policy-committee">Find out more</a></section>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone no-border">
+                    <h3>Research</h3>
+
+                    {{#if supplimentaryResponses.latest_research.hits.hits}}
+                    {{{supplimentaryResponses.latest_research.hits.hits.[0]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_research.hits.hits.[1]._source.rendered.gist}}}
+                    {{{supplimentaryResponses.latest_research.hits.hits.[2]._source.rendered.gist}}}
+                    {{/if}}
+
+                    <a href="/policy-research/research" class="v-margin">More research</a>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-card">
+                        <section class="mdc-card__primary">
+                            <h1 class="mdc-card__title mdc-card__title--large">Campaigns</h1>
+                        </section>
+                        <section class="mdc-card__supporting-text">Learn more about our campaigns.</section>
+                        <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/projects-campaigns" href="/projects-campaigns">Find out more</a></section>
+                    </div>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-card">
+                        <section class="mdc-card__primary">
+                            <h1 class="mdc-card__title mdc-card__title--large">Evidence Library</h1>
+                        </section>
+                        <section class="mdc-card__supporting-text">A resource for anyone interested in learning about the third sector in Scotland.</section>
+                        <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/policy-research/evidence-libr" href="/policy-research/evidence-library">Find out more</a></section>
+                    </div>
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-card">
+                        <section class="mdc-card__primary">
+                            <h1 class="mdc-card__title mdc-card__title--large">Policy Committee</h1>
+                        </section>
+                        <section class="mdc-card__supporting-text">Advising us on policies which reflect the best interests of the third sector in Scotland.</section>
+                        <section class="mdc-card__actions"><a class="mdc-card__action" ng-reflect-router-link="/policy-research/policy-commit" href="/policy-research/policy-committee">Find out more</a></section>
+                    </div>
                 </div>
             </div>
         </div>
