--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1385,8 +1385,7 @@ figure {
     line-height: 2.2rem;
 }
 .home {
-    .splash-image.hello .splash-overlay,
-    .splash-image.hello {
+    .splash-image.hello .splash-overlay .container-fluid {
         min-height: 40vh;
     }
     .splash-image.hello {
@@ -1403,7 +1402,7 @@ figure {
         }
     }
 }
-.credit-union .splash-image {
+.credit-union .splash-image .splash-overlay .container-fluid {
     min-height: $spacing-unit*9;
     img.header-text {
         max-height: $spacing-unit*6;
@@ -2623,17 +2622,13 @@ footer {
             }
         }
     }
-    .home .splash-image.hello {
-        padding: 0;
+    .home .splash-image.hello .splash-overlay .container-fluid {
         min-height: 30vh;
-        .splash-overlay {
-            min-height: 30vh;
-            h1.header-text {
-                font-size: 2rem;
-                line-height: 2.2rem;
-            }
+        h1.header-text {
+            font-size: 2rem;
+            line-height: 2.2rem;
         }
-        .container-fluid .mdc-layout-grid {
+        .mdc-layout-grid {
             width: 100%;
             margin: 0;
             h1.header-text {
