Header captions across the site

--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -16,6 +16,7 @@
                     <a href="/about" class="mdc-button">Find out more</a>
                 </p>
             </div>
+            <!-- {{> header_caption}} -->
         </div>
     </div>
 </div>
