--- a/functions/test-db/json2/scvo/templates/post-author.hbs
+++ b/functions/test-db/json2/scvo/templates/post-author.hbs
@@ -13,6 +13,7 @@
                         </span>
                     </h1>
                 </div>
+                {{> header_caption}}
             </div>
         </div>
     </div>
