--- a/functions/test-db/json2/scvo/templates/post-category.hbs
+++ b/functions/test-db/json2/scvo/templates/post-category.hbs
@@ -17,6 +17,7 @@
                     </h1>
                     {{/if}}
                 </div>
+                {{> header_caption}}
             </div>
         </div>
     </div>
