--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -13,6 +13,7 @@
                     </h1>
                     {{/if}}
                 </div>
+                {{> header_caption}}
             </div>
         </div>
     </div> -->
