--- a/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
+++ b/functions/test-db/json2/humanrightsdeclaration/humanrightsdeclaration-styles.scss
@@ -111,6 +111,7 @@ a {
             padding: $spacing-unit;
             text-transform: none;
         }
+        .mdc-tab.active,
         .mdc-tab:hover {
             text-decoration: underline;
         }
