--- a/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/templates/layout.hbs
@@ -43,15 +43,12 @@
                             </span>
                         </section>
                         <section class="mdc-toolbar__section mdc-toolbar__section--align-end">
-                            <nav id="main-tab-bar" class="mdc-tab-bar">
-                                <a class="mdc-tab" href="/">Home</a>
-                                <a class="mdc-tab" href="/the-declaration">The Declaration</a>
-                                <a class="mdc-tab" href="/why-sign">Why sign?</a>
-                                <a class="mdc-tab" href="/sign-up">Sign up</a>
-                                <a class="mdc-tab" href="/faq">FAQ</a>
-                                <!-- <a class="mdc-tab" href="/signatories">Signatories</a> -->
+                            <nav id="main-tab-bar" class="mdc-tab-bar" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.mdc-tab--label'" [menuactiveclass]="'active'">
+                                {{#each menus.main}}
+                                <a class="mdc-tab{{#if match}} mdc-tab--active{{/if}}" href="{{path}}"><span class="mdc-tab--label">{{{label}}}</span></a>
+                                {{/each}}
                             </nav>
-                            <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" id="menu_button" aria-label="Menu" alt="Menu">
+                            <button id="menu_button" class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" onclick="window.drawer.open = true">
                                 <span class="far fa-2x fa-bars" aria-hidden="true"></span>
                             </button>
                         </section>
@@ -67,12 +64,14 @@
                         </div>
                     </header>
                     <nav class="mdc-temporary-drawer__content mdc-list-group">
-                        <a class="mdc-list-item" href="/" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Home</a>
-                        <a class="mdc-list-item" href="/the-declaration" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">The Declaration</a>
-                        <a class="mdc-list-item" href="/why-sign" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Why sign?</a>
-                        <a class="mdc-list-item" href="/sign-up" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">Sign up</a>
-                        <a class="mdc-list-item" href="/faq" data-mdc-tabindex-handled="true" tabindex="-1" onclick="window.drawer.open = false">FAQ</a>
-                        <!-- <a class="mdc-list-item" href="/signatories" data-mdc-tabindex-handled="true" tabindex="-1" onclick="menu_draw.MDCTemporaryDrawer.open = false">Signatories</a> -->
+                        <div id="icon-with-text-demo" class="mdc-list" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.menu-label'" [menuactiveclass]="'active'">
+                            {{#each menus.main}}
+                            <a class="mdc-list-item{{#if match}} mdc-tab--active{{/if}}" href="{{path}}"
+                                data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
+                                <span class="menu-label">{{{label}}}</span>
+                            </a>
+                            {{/each}}
+                        </div>
                     </nav>
                 </nav>
             </aside>
