--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -294,6 +294,7 @@ primary-dark: #251032
     }
     .mdc-simple-menu .mdc-list-item:after,
     .mdc-simple-menu .mdc-list-item:before,
+    .splash-image .header-caption,
     .mdc-theme--primary-alpha-bg {
         background-color: map-get($themeSelected, 'primary-alpha');
     }
@@ -1369,8 +1370,9 @@ figure {
         right: 0;
         max-width: 50%;
         font-size: 0.9rem;
-        color: white;
-        background: rgba(0,0,0,0.5);
+        color: rgba(255, 255, 255, 0.8);
+        background: rgba(0, 0, 0, 0.65);
+        border-radius: $spacing-unit/4 $spacing-unit/4 0 0;
         padding: $spacing-unit/4 $spacing-unit*(0.4);
         p {
             margin: 0;
