Evidence library template

--- a/functions/test-db/json2/scvo/partials/sidebar-library-search.hbs
+++ b/functions/test-db/json2/scvo/partials/sidebar-library-search.hbs
@@ -15,3 +15,9 @@
         Search
     </button>
 </form>
+
+<hr />
+
+<p>
+    The Evidence Library is a resource for anyone interested in learning about the third sector in Scotland. The database is regularly being added to and visitors are encouraged to submit their research for possible inclusion on the site. For further information, please email: <a href="mailto:research@scvo.org.uk">research@scvo.org.uk</a>
+</p>
