--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -49,29 +49,30 @@
                         {{>filter_checkbox label="Staff" value="scvo-staff"}}
                         {{>filter_checkbox label="Training & events" value="scvo-event"}}
 
-                        <h3>Digital Participation</h3>
-                        {{>filter_checkbox label="Digital funded projects" value="scvo-grant-charter"}}
+                        <h3>Digital programme</h3>
+                        {{>filter_checkbox label="Funded projects" value="scvo-grant-charter"}}
                         {{>filter_checkbox label="Digital Participation Charter signatories" value="digital-charter-signatory"}}
 
                         <h3>Funding Scotland</h3>
-                        {{>filter_checkbox label="Funding Scotland funds" value="funding-scotland-fund"}}
+                        {{>filter_checkbox label="Funds" value="funding-scotland-fund"}}
 
                         <h3>Good HQ</h3>
-                        {{>filter_checkbox label="Good HQ organisation profiles" value="goodhq-organisation"}}
+                        {{>filter_checkbox label="Organisations" value="goodhq-organisation"}}
+                        {{>filter_checkbox label="Posts" value="goodhq-post"}}
 
                         <h3>Goodmoves</h3>
-                        {{>filter_checkbox label="Goodmoves jobs" value="goodmoves-legacy"}}
+                        {{>filter_checkbox label="Jobs" value="goodmoves-legacy"}}
 
                         <h3>TFN</h3>
-                        {{>filter_checkbox label="TFN blog posts" value="tfn-blog-post"}}
-                        {{>filter_checkbox label="TFN events" value="tfn-event"}}
-                        {{>filter_checkbox label="TFN features" value="trn-feature"}}
-                        {{>filter_checkbox label="TFN lists" value="tfn-list"}}
-                        {{>filter_checkbox label="TFN news posts" value="tfn-news-post"}}
-                        {{>filter_checkbox label="TFN polls" value="tfn-poll"}}
+                        {{>filter_checkbox label="Blog posts" value="tfn-blog-post"}}
+                        {{>filter_checkbox label="Events" value="tfn-event"}}
+                        {{>filter_checkbox label="Features" value="tfn-feature"}}
+                        {{>filter_checkbox label="Lists" value="tfn-list"}}
+                        {{>filter_checkbox label="News posts" value="tfn-news-post"}}
+                        {{>filter_checkbox label="Polls" value="tfn-poll"}}
                     </form>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
                     {{> search_info}}
 
                     {{#each primaryResponse.hits.hits}}
