Fixed OSCR links

--- a/functions/test-db/json2/digitalparticipation/templates/layout.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/layout.hbs
@@ -67,7 +67,7 @@
                         <nav class="mdc-temporary-drawer__content mdc-list-group">
                             <div id="icon-with-text-demo" class="mdc-list" [menu]="'main'" [menulinkselector]="''" [menulabelselector]="'span.menu-label'" [menuactiveclass]="'active'">
                                 {{#each menus.main}}
-                                <a class="mdc-list-item{{#if match}} mdc-tab--active{{/if}}" href="{{path}}" 
+                                <a class="mdc-list-item{{#if match}} mdc-tab--active{{/if}}" href="{{path}}"
                                     data-mdc-tabindex-handled="true" tabindex="-" onclick="window.drawer.open = false">
                                     <span class="menu-label">{{{label}}}</span>
                                 </a>
@@ -100,7 +100,7 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone">
                                     <p class="white-text copyright">
-                                        &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation.<br />Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
+                                        &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation.<br />Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
                                     </p>
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone">
