--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -360,6 +360,9 @@ primary-dark: #251032
                 transparent
             );
         }
+        .splash-image .header-caption {
+            max-width: 42%;
+        }
     }
     @media screen and (max-width: 991px) {
         .splash-overlay {
@@ -371,6 +374,9 @@ primary-dark: #251032
                 transparent
             );
         }
+        .splash-image .header-caption {
+            max-width: 36%;
+        }
     }
     @media screen and (max-width: 839px) {
         .splash-overlay {
@@ -381,6 +387,9 @@ primary-dark: #251032
                 transparent 67.08%,
                 transparent
             );
+        }
+        .splash-image .header-caption {
+            display: none;
         }
     }
     @media screen and (max-width: 450px) {
@@ -2618,9 +2627,6 @@ footer {
         .container-fluid {
             .mdc-layout-grid {
                 width: 100%;
-            }
-            .header-caption {
-                display: none;
             }
         }
     }
