--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -96,10 +96,10 @@ secondary-light: #FFA000,
 secondary-dark: #FF6F00
 ),
 funding-scotland: (
-primary: #6FB744,
-primary-alpha: #6FB744,
-primary-light: #6FB744,
-primary-dark: #6FB744,
+primary: #71B745,
+primary-alpha: rgba(113, 183, 69, 0.89),
+primary-light: #71B745,
+primary-dark: #689F38,
 secondary: #FF8F00,
 secondary-light: #FFA000,
 secondary-dark: #FF6F00
@@ -494,14 +494,6 @@ primary-dark: #251032
 .projects-campaigns {
     @include theme-colours('projects');
 }
-.search-result.scvo-cms-post,
-.related-posts,
-.post,
-.blogs,
-.press-media,
-.policy-research {
-    @include theme-colours('posts');
-}
 .goodhq,
 .search-result.goodhq-organisation,
 .search-result.goodhq-post {
@@ -520,7 +512,6 @@ primary-dark: #251032
 .search-result.tfn-list {
     @include theme-colours('tfn');
 }
-.funding-scotland,
 .search-result.funding-scotland-fund,
 .services.funding-scotland {
     @include theme-colours('funding-scotland');
@@ -530,6 +521,14 @@ primary-dark: #251032
 }
 .digital {
     @include theme-colours('digital');
+}
+.search-result.scvo-cms-post,
+.related-posts,
+.post,
+.blogs,
+.press-media,
+.policy-research {
+    @include theme-colours('posts');
 }
 .services,
 .events,
@@ -2368,7 +2367,7 @@ p.results-highlights em {
 
 footer {
     .footer-main {
-        padding: $spacing-unit*1.5 0 0;
+        padding: 0;
     }
     h3 {
         padding-bottom: $spacing-unit/2;
