--- a/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
+++ b/functions/test-db/json2/digitalparticipation/digitalparticipation-styles.scss
@@ -25,7 +25,7 @@ $brand-signup:                      #6dede5;
 $brand-other:                       #fee972; // Templates-Desktop PDF
 $brand-skills:                      #6beda0;
 
-$scvo-background:                   #263238;
+$scvo-background:                   #02162E;
 
 // Base variables
 
@@ -1097,10 +1097,6 @@ main {
         background-color: white;
         border-bottom-color: $brand-typography;
     }
-    .mdc-textfield__input {
-        width: 95%;
-        height: 2.6rem;
-    }
 
     .form-group {
         input[type=text],
@@ -1435,6 +1431,7 @@ main {
         }
     }
     .digital-charter-signatory {
+        margin: 0 auto;
         h4 {
             margin-bottom: 0.5rem;
         }
@@ -1500,6 +1497,25 @@ hr {
 .signatories main {
     form {
         margin-bottom: $spacing-unit*2;
+        .mdc-textfield {
+            position: relative;
+            margin-right: $spacing-unit/2;
+            .mdc-textfield__input {
+                margin-right: 1rem;
+                box-sizing: border-box;
+                padding: 0 $spacing-unit*2.5 0 $spacing-unit/2;
+                width: 100%;
+            }
+            .search-button-large {
+                padding: 1px 0 0;
+                position: absolute;
+                top: $spacing-unit/2;
+                right: $spacing-unit/2;
+                .fa-search {
+                    color: #333;
+                }
+            }
+        }
     }
     h1 {
         font-size: 5.3rem;
@@ -1585,7 +1601,7 @@ hr {
         }
     }
     .signatory:nth-child(4n+1):nth-last-child(-n+4),
-    .signatory:nth-child(4n+1):nth-last-child(-n+4) ~ .mdc-layout-grid__cell--span-3 {
+    .signatory:nth-child(4n+1):nth-last-child(-n+4) ~ .mdc-layout-grid__cell--span-3-desktop {
         border-bottom: $brand-border-width solid $brand-typography;
     }
 }
@@ -1664,45 +1680,98 @@ hr {
 }
 
 footer {
-    background: rgb(55,71,79);
-    background: -moz-linear-gradient(top, rgba(55,71,79,1) 0%, rgba(38,50,56,1) 100%);
-    background: -webkit-linear-gradient(top, rgba(55,71,79,1) 0%,rgba(38,50,56,1) 100%);
-    background: linear-gradient(to bottom, rgba(55,71,79,1) 0%,rgba(38,50,56,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#37474f', endColorstr='#263238',GradientType=0 );
-    padding: $spacing-unit*2 0 $spacing-unit*2;
-    .brand-logo img {
-        max-width: 180px;
-    }
+    --mdc-layout-grid-margin-desktop: 1rem;
+    --mdc-layout-grid-gutter-desktop: 1rem;
+    --mdc-layout-grid-margin-tablet: 1rem;
+    --mdc-layout-grid-gutter-tablet: 1rem;
+    --mdc-layout-grid-margin-phone: 1rem;
+    --mdc-layout-grid-gutter-phone: 1rem;
+    color: white;
+    background-color: $brand-typography;
     .container-fluid {
         position: relative;
     }
-    p {
-        font-family: "Open Sans", Helvetica, Arial, sans-serif;
-        font-weight: 400;
-        font-size: 1.03rem;
+    .footer-main {
+        border-top: $spacing-unit*(0.6) solid white;
+        padding: $spacing-unit 0 $spacing-unit*2;
+        background-image: linear-gradient(160deg, $brand-typography, $brand-typography 60%, $scvo-background 110%, $scvo-background);
+    }
+    h3 {
+        padding-bottom: $spacing-unit/2;
+        border-bottom: $spacing-unit/5 solid white;
         color: white;
-        a {
-            color: white !important;
-            text-decoration: underline;
-            text-decoration-skip: ink;
+    }
+    a {
+        color: white;
+        text-decoration: underline;
+    }
+    a:hover {
+        color: white;
+    }
+    .mdc-list .mdc-list-item a:hover {
+        text-decoration: underline !important;
+    }
+    .brand-logo {
+        display: block;
+        text-align: right;
+        img {
+            margin-bottom: 0;
         }
     }
-    p.copyright {
-        font-size: 0.92rem;
+    .mdc-layout-grid {
+        padding: 0;
+        margin-bottom: 0;
+        p {
+            margin: 0 0 0.8rem;
+        }
+    }
+    p,
+    .fa-ul li,
+    .mdc-list-item {
+        font-size: 1.25rem;
+    }
+    .fa-ul {
+        margin: 0 0 0 $spacing-unit*2;
+        li a {
+            text-decoration: none;
+        }
+        li a:hover {
+            text-decoration: underline;
+        }
+    }
+    ul {
+        margin-bottom: $spacing-unit !important;
+    }
+    .mdc-layout-grid p {
         margin-bottom: 0;
     }
-    .description p {
-        margin: 0 0 1rem;
+    .mdc-list {
+        padding: 0;
+        .mdc-list-item {
+            height: $spacing-unit*1.5;
+            a {
+                text-decoration: none;
+            }
+        }
+    }
+    .footer-copyright {
+        background-color: $scvo-background;
+        padding-bottom: $spacing-unit/2;
+        font-size: 1rem;
+        p {
+            font-size: 1rem;
+            margin: 0.7rem 0 0;
+        }
     }
     .logo.scvo {
         position: absolute;
-        bottom: 8px;
+        bottom: 0.7rem;
         right: 0.75rem;
     }
     .logo.digital-scotland {
         height: 50px;
         position: absolute;
-        bottom: 6px;
+        bottom: 0.7rem;
         right: 160px;
     }
     .menu ul {
