--- a/functions/test-db/json2/digitalparticipation/templates/layout.hbs
+++ b/functions/test-db/json2/digitalparticipation/templates/layout.hbs
@@ -83,27 +83,57 @@
             </main>
 
             <footer>
-                <div class="footer">
+                <div class="footer-main">
                     <div class="container-fluid">
-                        <div class="footer-main mdc-layout-grid">
+                        <div class="mdc-layout-grid">
                             <div class="mdc-layout-grid__inner">
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 description">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                    <h3>Contact</h3>
+                                    <ul class="fa-ul">
+                                        <li>
+                                            <span class="fa-li"><span class="fas fa-envelope"></span></span>
+                                            <a href="mailto:digital@scvo.org.uk">digital@scvo.org.uk</a>
+                                        </li>
+                                        <li>
+                                            <span class="fa-li"><span class="fab fa-twitter"></span></span>
+                                            <a href="https://twitter.com/digiscot">Twitter</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                    <h3>Help</h3>
+                                    <ul class="mdc-list">
+                                        <li class="mdc-list-item">
+                                            <a href="/accessibility">Accessibility</a>
+                                        </li>
+                                        <li class="mdc-list-item">
+                                            <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a>
+                                        </li>
+                                        <li class="mdc-list-item">
+                                            <a href="/terms-and-conditions">Terms &amp; conditions</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
+                                    <h3>About</h3>
                                     <p>
-                                        Scotland's Digital Participation Charter is built and managed by the <a href="http://scvo.org">Scottish Council for Voluntary Organisations</a> with support from the <a href="http://gov.scot">Scottish Government</a>.
-                                    </p>
-                                    <p>
-                                        <a href="/contact-us">Contact us</a> |
-                                        <a href="/accessibility">Accessibility</a> |
-                                        <a href="/privacy-and-cookies">Privacy &amp; cookies policy</a> |
-                                        <a href="/terms-and-conditions">Terms &amp; conditions</a>
+                                        <strong>Scotland's Digital Participation Charter</strong> is built and managed by the <a href="http://scvo.org">Scottish Council for Voluntary Organisations</a> with support from the <a href="http://gov.scot">Scottish Government</a>.
                                     </p>
                                 </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone">
-                                    <p class="white-text copyright">
-                                        &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation.<br />Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-copyright">
+                    <div class="container-fluid">
+                        <div class="mdc-layout-grid">
+                            <div class="mdc-layout-grid__inner">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-9-desktop">
+                                    <p>
+                                        &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
                                     </p>
                                 </div>
-                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
                                     <a href="http://gov.scot/Topics/Economy/digital">
                                         <img src="https://storage.cloud.google.com/digitalparticipation/images/logos/digital-scotland.png" alt="Digital Scotland" class="logo digital-scotland" />
                                     </a>
